--- a/Traffic.html
+++ b/Traffic.html
@@ -1,9 +1,5 @@
----
-layout: page
-title: Traffic
----
+<!DOCTYPE HTML>
 <html>
-	<title>Traffic Map</title>
 	<head>
 		<style>
 			div { width:600px; height:740px; }
